Changelog for Shake

    #327, Add AutoDeps feature
    #325, add FileStdin to specify the stdin comes from a file
    Make an empty Stdin different from no Stdin (inherit) in cmd
    #320, add ** as an alternative to // in patterns
    #283, change the semantics of removeFiles, no implicit deletes
    #283, speed up getDirectoryFiles on patterns involving literals
    Work with stack test
    Add RemEnv cmd option
    Fix a small space leak on Linux
    Fix a space leak in profile summary information
    Properly handle *//* in file pattern (at least one directory)
    #303, allow ninja rule names to have dots in them
    Properly handle /// in file pattern (a wildcard then /)
    Make sure Windows separators work in |%> FilePattern rules
    #296, fix multifile rules when using --digest-and-input
    #286, document the relationship between getEnv and lookupEnv
    #285, improve the documentation for phony/alwaysRerun
    #284, fix the documentation for normaliseEx
    #293, add getProgress
    #270, support MonadFix for Rules, allows recursive cache
    #295, discount time spent waiting for a cache
    #294, give better error messages if you hit GHC bug #10793
    #4, add a lock file to stop corrupting databases
0.15.5
    #279, make usingConfigFile do a need on the config file
    Fix a bug where predicted progress could sometimes be ??
    #264, make the the suite more less non-deterministic
0.15.4
    Undo a locally modified file
0.15.3
    #254, in staunch mode, print out all exceptions
    Require extra-1.3
    #259, discount time waiting for a resource in profiles
    #252, have the docs test configure not in dist
0.15.2
    #248, add another example of using cmd
    #245, initial support for fsatrace lint checking
    Reexport -<.> from filepath where available
    Hoogle #106, trigger on filepath version, not GHC version
    Add AddEnv and AddPath command options
    #243, close fds in child processes when spawning commands